--- a/main.ipynb
+++ b/main.ipynb
@@ -216,6 +216,54 @@
    "source": [
     "plt.imshow(sp.intensity())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2497fab1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test=np.ones([1000,1000])*np.pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ccf00d82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.36 ms ± 367 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "np.sum(np.abs(test)**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "0a546cb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.44 ms ± 229 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "np.sum(np.abs(test))**2"
+   ]
   }
  ],
  "metadata": {
